--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 	<div class="panel">
 		<h3  style="margin-top:0;">Network and training</h3>
 		<p id="network-info-area"></p>
+		<div id="training-info-area"></div>
 		<p id="neurons-info-area"></p>
 		<p id="synapses-info-area"></p>
 		<table id="network-table" style="width:100%">
